full-stack-applications/fastfood-microservices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fastfood
  labels:
    name: fastfood
    app: fastfood-system
